--- a/LoggingFrameworkTester/App.config
+++ b/LoggingFrameworkTester/App.config
@@ -3,4 +3,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key="ApplicationName" value="LoggingFrameworkTester" />
+    <add key="Logging.LogToEventLog" value="true" />
+    <add key="Logging.LogToSeqServer" value="true" />
+    <add key="Seq.ServerUrl" value="http://localhost:5341/" />
+    <add key="Seq.ApiKey" value="j75TLHhdtsJjxWIED1W2" />
+    <add key="serilog:write-to:RollingFile.pathFormat" value="c:\Temp\Logs\lft-{Date}.txt" />
+    <add key="serilog:write-to:RollingFile.retainedFileCountLimit" value="14" />
+    <add key="serilog:write-to:RollingFile.outputTemplate" value="{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {MachineName} v{AppVersion} {Message}{NewLine}{Exception}" />
+  </appSettings>
 </configuration>
