--- a/MyCompany.Core/MyCompany.Core.csproj
+++ b/MyCompany.Core/MyCompany.Core.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D9071753-0BEB-46D4-B607-5DB4E463F11B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>LoggingFrameworkTester</RootNamespace>
-    <AssemblyName>LoggingFrameworkTester</AssemblyName>
+    <ProjectGuid>{B3812102-2D99-46C8-A546-2DABB412E5B9}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>MyCompany.Core</RootNamespace>
+    <AssemblyName>MyCompany.Core</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,10 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\packages\Serilog.2.6.0\lib\net46\Serilog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,23 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ComplexData.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="ILoggingFrameworkTesterConfig.cs" />
+    <Compile Include="LoggingFrameworkTesterConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MyCompany.Core.Serilog\MyCompany.Core.Serilog.csproj">
-      <Project>{7e188dfb-a3f8-4472-b0d7-1dc8d0d39519}</Project>
-      <Name>MyCompany.Core.Serilog</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MyCompany.Core\MyCompany.Core.csproj">
-      <Project>{b3812102-2d99-46c8-a546-2dabb412e5b9}</Project>
-      <Name>MyCompany.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
