Updates made to include MS Sql serilog config entries

--- a/LoggingFrameworkTester/App.config
+++ b/LoggingFrameworkTester/App.config
@@ -5,12 +5,20 @@
     </startup>
   <appSettings>
     <add key="ApplicationName" value="LoggingFrameworkTester" />
+    <add key="Logging.LogToFile" value="true" />
     <add key="Logging.LogToEventLog" value="true" />
     <add key="Logging.LogToSeqServer" value="true" />
     <add key="Seq.ServerUrl" value="http://localhost:5341/" />
     <add key="Seq.ApiKey" value="j75TLHhdtsJjxWIED1W2" />
-    <add key="serilog:write-to:RollingFile.pathFormat" value="c:\Temp\Logs\lft-{Date}.txt" />
+
+    <add key="serilog:using:RollingFile" value="Serilog.Sinks.RollingFile" />
+    <add key="serilog:write-to:RollingFile.pathFormat" value="Logs/lft-{Date}.txt" />
     <add key="serilog:write-to:RollingFile.retainedFileCountLimit" value="14" />
     <add key="serilog:write-to:RollingFile.outputTemplate" value="{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {MachineName} v{AppVersion} {Message}{NewLine}{Exception}" />
+
+    <add key="serilog:using:MSSqlServer" value="Serilog.Sinks.MSSqlServer" />
+    <add key="serilog:write-to:MSSqlServer.connectionString" value="Data Source=JEANMAC-PC\SQL2008;Initial Catalog=TestDb;Integrated Security=True;"/>
+    <add key="serilog:write-to:MSSqlServer.tableName" value="AuditLog"/>
+    <add key="serilog:write-to:MSSqlServer.autoCreateSqlTable" value="true"/>
   </appSettings>
 </configuration>
