--- a/LoggingFrameworkTester/packages.config
+++ b/LoggingFrameworkTester/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Serilog" version="2.6.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.MSSqlServer" version="5.1.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net461" />
 </packages>
