minor updates - information added to readme.md

--- a/LoggingFrameworkTester/App.config
+++ b/LoggingFrameworkTester/App.config
@@ -17,7 +17,7 @@
     <add key="serilog:write-to:RollingFile.outputTemplate" value="{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {MachineName} v{AppVersion} {Message}{NewLine}{Exception}" />
 
     <add key="serilog:using:MSSqlServer" value="Serilog.Sinks.MSSqlServer" />
-    <add key="serilog:write-to:MSSqlServer.connectionString" value="Data Source=JEANMAC-PC\SQL2008;Initial Catalog=TestDb;Integrated Security=True;"/>
+    <add key="serilog:write-to:MSSqlServer.connectionString" value="Data Source=XYZ;Initial Catalog=TestDb;Integrated Security=True;"/>
     <add key="serilog:write-to:MSSqlServer.tableName" value="AuditLog"/>
     <add key="serilog:write-to:MSSqlServer.autoCreateSqlTable" value="true"/>
   </appSettings>
